...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFE792"
    tools:context=".view.habit.AllHabitsFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/habit_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toTopOf="@+id/reorder_fab"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/list_habit_item" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
...
