...
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/TodaysHabitsFragment"
            android:icon="@drawable/ic_baseline_today_24"
            android:title="@string/today_s_habits" />
        <item
            android:id="@+id/AllHabitsFragment"
            android:icon="@drawable/ic_baseline_check_circle_24"
            android:title="@string/all_habits" />
        <item
            android:id="@+id/FollowersFragment"
            android:icon="@drawable/ic_baseline_people_24"
            android:title="@string/followers" />
...
