<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFE792"
    android:padding="8dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginEnd="@dimen/fragment_horizontal_margin"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/ic_baseline_check_circle_24" />

    <LinearLayout
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/caveat"
            android:padding="2dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:text="Title" />

        <TextView
            android:id="@+id/reason_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/caveat"
            android:padding="2dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textSize="20sp"
            tools:text="Reason" />

    </LinearLayout>

    <ImageView
        android:id="@+id/lock"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_weight="1"
        app:srcCompat="@drawable/ic_baseline_lock_24" />
</LinearLayout>