...
            android:textSize="18sp"
            tools:text="This is an optional comment." />
    </LinearLayout>


    <ImageView
        android:id="@+id/button_edit"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:contentDescription="@string/edit_button"
        app:srcCompat="@drawable/ic_baseline_edit_24" />

    <ImageView
        android:id="@+id/button_delete"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:contentDescription="@string/delete_button"
        app:srcCompat="@drawable/ic_baseline_delete_24" />

...
