...
        app:layout_constraintTop_toBottomOf="@+id/eventImage"
        app:layout_constraintWidth_percent="0.2"
        android:contentDescription="@string/get_from_gallery"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/button_add_habit_event"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="@dimen/fragment_horizontal_margin"
        android:backgroundTint="@color/teal_200"
        android:fontFamily="@font/caveat"
        android:text="@string/add_habit_event"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_add_location" />

    <EditText
        android:id="@+id/edit_text_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/caveat"
        android:hint="@string/comment"
        android:minHeight="48dp"
...
