...

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/habit_event_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/fragment_horizontal_margin"
        app:layout_constraintBottom_toTopOf="@+id/button_new_habit_event"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/privacyLayout"
        tools:itemCount="5"
        tools:listitem="@layout/list_habit_event_item" />
...
